[tool.poetry]
name = "converters"
version = "0.1.0"
description = ""
authors = ["akawasaki <a.kawasaki1010@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.2"
xlwt = "^1.3.0"
openpyxl = "^3.0.9"
boto3 = "^1.24.44"
requests = "^2.28.1"
pydantic = "^1.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
